# enzo-lang

./: .gitignore  README-1.md  README-lazy.md  README.md  markup.md  to-do.md
interpreter/: actual.out  colab_demo.ipynb  conditional-raw-result.enzo  debug.py  debug_ast_import.py  debug_binding_type.py  debug_parse_errors.py  debug_split.py  debug_third_case.py  debug_tokens.py  demo.ipynb  enzo_notebook_setup.py  enzo_one_liner.py  enzo_universal_setup.py  full-demo.ipynb  functions-output.enzo  pyproject.toml  raw-result.enzo  regen-goldens.py  run-tests.enzo  run-tests.py  run_tests.py  simple_enzo_setup.py  test-runner.py  test.enzo  test.sh  test_binding.py  test_condition.enzo  test_debug.py  test_error_recovery.enzo  test_func_ref.enzo  test_imports.py  test_simple_named_func.enzo  test_split.py  test_third_case.py  tests.enzo
interpreter/debugging/: comment_test.enzo  debug_actual_file.py  debug_actual_file_content.py  debug_actual_parser_issue.py  debug_actual_parser_state.py  debug_anon_function.py  debug_arg_invocation.py  debug_arithmetic_contexts.py  debug_assignment_op.py  debug_ast_types.py  debug_bare_function.enzo  debug_bind_issue.py  debug_bind_or_rebind.py  debug_block_comment_cli.py  debug_block_comment_full.py  debug_block_comments.py  debug_blueprint.py  debug_blueprint_interpolation.py  debug_blueprint_loop.py  debug_blueprint_name.py  debug_blueprint_printing.py  debug_blueprint_rebind.py  debug_boolean_truthiness.py  debug_chain_levels.py  debug_chain_tracing.py  debug_chainmap_copy.py  debug_clean_calls.py  debug_cli_detailed.py  (+290 more)
(+156 files in other folders)
